# skill-install-plus-plus

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  install.mjs  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: check-installer.mjs  skill_install_plus_plus.py
skill_install_plus_plus/: __init__.py  cli.py  manager.py
tests/: test_cli.py  test_manager.py
