[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillpp"
version = "0.1.1"
description = "Audit-first skill and plugin manager for Codex, Claude Code, and Copilot CLI."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Mattia Sanchioni" },
]
keywords = ["ai", "cli", "codex", "copilot", "claude", "skills", "plugins"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sank96/skill-install-plus-plus"
Repository = "https://github.com/sank96/skill-install-plus-plus"
Issues = "https://github.com/sank96/skill-install-plus-plus/issues"
Documentation = "https://github.com/sank96/skill-install-plus-plus#readme"

[project.scripts]
skillpp = "skill_install_plus_plus.cli:main"

[tool.setuptools.packages.find]
include = ["skill_install_plus_plus*"]
